--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
+    implementation 'com.facebook.android:facebook-android-sdk:9.0.0'
 }
