--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.android.asklepius"
+        applicationId "org.core.asklepius"
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 20
