--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "org.core.asklepius"
         minSdkVersion 22
         targetSdkVersion 30
-        versionCode 20
-        versionName "v0.4.7"
+        versionCode 21
+        versionName "0.5.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -45,7 +45,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0'
-    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
-    implementation 'com.facebook.android:facebook-android-sdk:9.0.0'
     implementation 'com.google.android.material:material:1.3.0'
 }
