Removed all instanced of Asklepius and replaced with Ashwini

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Asklepius">
+        android:theme="@style/Theme.Ashwini">
         <activity android:name="org.core.ashwini.UserValidationUpload" />
         <activity android:name="org.core.ashwini.DisplaySearchResults" />
         <activity android:name="org.core.ashwini.SearchParameters" />
